# aidi_axio_description

./: CMakeLists.txt  README.md  package.xml
config/: vehicle_info.yaml
launch/: vehicle_interface.launch
urdf/: vehicle.xacro
