<?xml version="1.0"?>
<package format="2">
  <name>aidi_axio_description</name>
  <version>0.1.0</version>
  <description>The aidi_axio_description package</description>

  <maintainer email="tomoya.yokoyama@tier4.jp">Tomoya Yokoyama</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
